--- a/pom.xml
+++ b/pom.xml
@@ -112,14 +112,14 @@
         <!-- Google Lib -->
         <google.guice.version>5.1.0</google.guice.version>
         <google.guava.version>31.1-jre</google.guava.version>
-        <google.errorprone.version>2.18.0</google.errorprone.version>
+        <google.errorprone.version>2.19.0</google.errorprone.version>
 
         <!-- Etcd Client -->
         <google.etcd.version>2.18.0</google.etcd.version>
 
         <!-- Grpc / Gson -->
-        <google.grpc.version>1.54.1</google.grpc.version>
-        <google.protobuf.version>3.22.4</google.protobuf.version>
+        <google.grpc.version>1.55.1</google.grpc.version>
+        <google.protobuf.version>3.23.0</google.protobuf.version>
         <google.gson.version>2.10.1</google.gson.version>
 
 
@@ -189,7 +189,7 @@
         <feign.version>8.18.0</feign.version>
         <joda.version>2.12.5</joda.version>
         <ignite.version>2.15.0</ignite.version>
-        <jedis.version>4.4.0-m2</jedis.version>
+        <jedis.version>4.4.0</jedis.version>
         <j2objc.version>2.8</j2objc.version>
         <checker.version>3.34.0</checker.version>
         <picoli.version>4.7.3</picoli.version>
